--- a/calendar/src/main/AndroidManifest.xml
+++ b/calendar/src/main/AndroidManifest.xml
@@ -1,10 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.eastandroid.smartc.permission">
+    package="dev.eastar.calendar">
 
-    <application>
-        <activity
-            android:name="android.permission.PermissionChecker"
-            android:theme="@style/PermissionTheme" />
-    </application>
+    <application/>
 
 </manifest>
