--- a/calendar/build.gradle
+++ b/calendar/build.gradle
@@ -35,4 +35,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
+
+    debugImplementation 'com.github.djrain:log:3.0.4'
 }
