--- a/calendar/build.gradle
+++ b/calendar/build.gradle
@@ -36,5 +36,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
-    debugImplementation 'com.github.djrain:log:3.0.4'
+    implementation 'com.github.djrain:log:3.0.4'
 }
