--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+//    releaseImplementation 'com.github.djrain:calendar:1.0.0'
+    debugImplementation project(':calendar')
+
     implementation project(':calendar')
     implementation 'com.github.djrain:log:3.0.4'
 }
