--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,12 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-//        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1' // Add this line for jitPack
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1' // Add this line for jitPack
     }
 }
 
