--- a/calendar/build.gradle
+++ b/calendar/build.gradle
@@ -35,5 +35,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.github.djrain:log:3.0.4'
+//    implementation 'com.github.djrain:log:3.0.4'
 }
